# SGS.ai

./: .env.prod.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_NATIVE.md  Dockerfile  build_package.jl  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.ps1  test_customers.docx  test_paragraph_customers.docx
backend/: config.py  core_server.py  dependencies.py  main.py  meta_algebra.py  meta_hdf5.py  meta_redis.py  meta_redis_old.py  u_controller.py
backend/HllSets/: LICENSE  Manifest.toml  Project.toml  README.md
backend/HllSets/src/: HllSets.jl  constants.jl  utils.jl
backend/HllSets/test/: runtests.jl
backend/api/schemas/: admin.py  auth.py  edge.py  graph.py  hllset.py  ingest.py  metadata.py  search.py  source.py
backend/api/v1/: admin.py  auth.py  (+8 more)
backend/core/: hashing.py  meta_redis.py
backend/mcp/: csv_collector.py  doc_collector.py  mysql_collector.py
backend/services/: admin_service.py  auth_service.py  edge_service.py  graph_service.py  hllset_service.py  ingest_service.py  metadata_service.py  nlp_search_service.py  persist_metadata_service.py  redis_admin_service.py  search_service.py  source_service.py  token_service.py
backend/utils/: tokenizer.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx
mcp_server/: Dockerfile  requirements.txt  server.py
mcp_server/collectors/: csv_collector.py  doc_collector.py  mssql_collector.py  mysql_collector.py
mysql/init/: 01_auth_schema.sql  02_ecommerce_demo.sql  03_ecommerce_extended.sql
(+19 files in other folders)
